[ticket-list] fix overflow

--- a/web-gui/src/app/page-components/classroom/ticket-list/ticket-list.component.scss
+++ b/web-gui/src/app/page-components/classroom/ticket-list/ticket-list.component.scss
@@ -1,11 +1,11 @@
 h3 {
-  text-align:center;
+  text-align: center;
 }
 
 .ticket-list {
-  height: 90%;
+  height: 100%;
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   flex-grow: 2;
   margin-left: 5%;
   margin-right: 5%;
@@ -23,9 +23,11 @@ h3 {
   }
 }
 
+.list-body {
+  overflow: auto;
+}
+
 .ticket {
   padding: 5px;
   margin: 5px;
 }
-
-
